--- a/book.bib
+++ b/book.bib
@@ -38,7 +38,7 @@ year = {2013}
   author={Booij, Sanne}
 }
 
-@article{Conner2012,
+@article{Conner2012a,
   author          = {Conner, Tamlin S. and Barrett, Lisa Feldman},
   title           = {Trends in ambulatory self-report: The role of momentary experience in psychosomatic medicine},
   year            = {2012},
@@ -52,6 +52,20 @@ year = {2013}
   doi             = {10.1097/PSY.0b013e3182546f18},
   keywords        = {Positive and Negative Affect Schedule,ecological momentary assessment,emotion,memory bias,questionnaires,stress},
   pmid            = {22582330},
+}
+
+
+@incollection{Conner2012b,
+abstract = {Capturing naturalistic human experience is a fundamental challenge for researchers in psychology and related fields. Fortunately, as demonstrated by the broad scope of this handbook, there is an increasing number of methodologies for studying the full range of experiences, behavior, and physiology as people go about their daily lives. Our goal in this chapter is to provide a starting point for researchers interesting in using these methods. Our aim is to provide practical guidance and basic considerations in how to design and conduct a study of individuals over time in their naturalistic environments. We explain how basic design considerations depend on a number of factors—the type of research question, the characteristics of the sample of interest, the nature of the phenomena under investigation, and the resources available to conduct the research. We address each consideration in turn and integrate our practical discussions with examples that draw on different types of research questions. In this way, our chapter lays a foundation for the more advanced chapters that follow in this section of the Handbook. (PsycINFO Database Record (c) 2016 APA, all rights reserved)},
+address = {New York,  NY,  US},
+author = {Conner, Tamlin S and Lehman, Barbara J},
+booktitle = {Handbook of research methods for studying daily life.},
+isbn = {978-1-60918-747-7 (Hardcover); 978-1-60918-749-1 (PDF)},
+keywords = {*Environment,*Experiences (Events),*Experimental Design,*Experimentation,*Methodology,Behavior,Experimental Psychologists,Physiology},
+pages = {89--107},
+publisher = {Guilford Press},
+title = {{Getting started: Launching a study in daily life.}},
+year = {2012}
 }
 
 
@@ -297,6 +311,24 @@ title = {{Handbook of research methods for studying daily life.}},
 year = {2012}
 }
 
+@article{Moskowitz2006,
+abstract = {Current methods of assessment in clinical psychopharmacology have several serious disadvantages, particularly for the study of social functioning. We aimed to review the strengths and weaknesses of current methods used in clinical psychopharmacology and to compare them with a group of methods, developed by personality/social psychologists, termed ecological momentary assessment (EMA), which permit the research participant to report on symptoms, affect and behaviour close in time to experience and which sample many events or time periods. EMA has a number of advantages over more traditional methods for the assessment of patients in clinical psychopharmacological studies. It can both complement and, in part, replace existing methods. EMA methods will permit more sensitive assessments and will enable more wide-ranging and detailed measurements of mood and behaviour. These types of methods should be adopted more widely by clinical psychopharmacology researchers.},
+author = {Moskowitz, Debbie S and Young, Simon N},
+file = {::},
+isbn = {1180-4882 (Print)$\backslash$n1180-4882 (Linking)},
+issn = {1180-4882},
+journal = {Journal of psychiatry {\&} neuroscience : JPN},
+keywords = {Data Collection,Data Collection: methods,Forecasting,Humans,Mental Disorders,Mental Disorders: drug therapy,Psychopharmacology,Psychopharmacology: trends,Social Behavior,Surveys and Questionnaires},
+mendeley-groups = {vision papers},
+number = {1},
+pages = {13--20},
+pmid = {16496031},
+title = {{Ecological momentary assessment: what it is and why it is a method of the future in clinical psychopharmacology.}},
+url = {/pmc/articles/PMC1325062/?report=abstract},
+volume = {31},
+year = {2006}
+}
+
 
 @article{Oorschot2012,
 abstract = {Background: Hallucinations are a core feature of psychosis, often causing considerable distress. Reported prevalence ranges from 70{\%} for auditory hallucinations (AHs) to 30{\%} for visual hallucinations (VHs) and 4{\%} for hallucinations in the tactile domain. AHs have been studied extensively but studies on VHs are scarce. The current study investigated the phenomenology of VHs and AHs in the realm of daily life, by analyzing their prevalence, course and co-occurrence over a 6-day period and their temporal relation to emotions and delusions. Methods: The ESM, a structured diary technique, was used to investigate hallucinatory experiences in the context of daily life in a pooled data-set of 184 participants (71{\%} males) with psychosis spectrum disorders, which were recruited from mental health facilities in the south of the Netherlands and Belgium. All self-assessments were rated on 7-point Likert scales. VHs were defined using participants' scores on the item "I see phenomena". AHs were measured using the item "I hear voices". Results: Overall, 73 participants (40{\%}) reported hallucinations. Ten participants reported VHs only, 38 reported both VHs and AHs, and 25 participants reported AHs only. AHs co-occurred with VHs in 40{\%} of the hallucinatory moments. Patients with both VHs and AHs reported higher levels of negative affect, lower levels of positive affect and higher delusional intensity than non-hallucinating patients. Increased delusional intensity preceded the onset of hallucinatory episodes, whereas increases in positive or negative affect did not. Discussion: These results show that VHs are common in patients with psychosis spectrum disorders and often co-occur with AHs in time. Furthermore delusional ideation may precede hallucinatory episodes in the realm of daily life, rather than result from a hallucination and affective dysregulation might not play a primary role in hallucination onset. {\textcopyright} 2012 Elsevier B.V.},
@@ -312,6 +344,16 @@ volume = {140},
 year = {2012}
 }
 
+@article{russell1980circumplex,
+  title={A circumplex model of affect.},
+  author={Russell, James A},
+  journal={Journal of personality and social psychology},
+  volume={39},
+  number={6},
+  pages={1161},
+  year={1980},
+  publisher={American Psychological Association}
+}   
    
 @misc{Scheffer2009,
 abstract = {Complex dynamical systems, ranging from ecosystems to financial markets and the climate, can have tipping points at which a sudden shift to a contrasting dynamical regime may occur. Although predicting such critical points before they are reached is extremely difficult, work in different scientific fields is now suggesting the existence of generic early-warning signals that may indicate for a wide class of systems if a critical threshold is approaching.},
@@ -363,6 +405,16 @@ title = {{Ecological momentary assessment (EMA) in studies of substance use.}},
 url = {http://doi.apa.org/getdoi.cfm?doi=10.1037/a0017074},
 volume = {21},
 year = {2009}
+}
+
+@article{Smyth2003,
+author = {a.a. {Smyth, J.M. {\&} Stone}},
+file = {:Users/lckooistra/Google Drive/New Literature/Mendeley/Robbins-Kubiak-2014-EMA-chapter.pdf:pdf},
+journal = {Journal of Happiness Studies},
+pages = {35--52},
+title = {{Ecological momentary assessment research in behavioral medicine.}},
+volume = {4},
+year = {2003}
 }
 
    
@@ -786,6 +838,17 @@ pmid = {16370781},
 title = {{Measurement and mismeasurement of mood: Recurrent and emergent issues}},
 volume = {68},
 year = {1997}
+}
+
+@article{watson1985,
+  title={Toward a consensual structure of mood.},
+  author={Watson, David and Tellegen, Auke},
+  journal={Psychological bulletin},
+  volume={98},
+  number={2},
+  pages={219},
+  year={1985},
+  publisher={American Psychological Association}
 }
 
 @article{Wichers2012,
