Update text sampling scheme and add references

--- a/book.bib
+++ b/book.bib
@@ -559,6 +559,23 @@ volume = {29},
 year = {2016}
 }
 
+@article{Hufford2002,
+abstract = {A. A. Stone and S. Shiffman (1994) defined ecological momentary assessment (EMA) as monitoring or sampling strategies that assess phenomena at the moment they occur in natural settings, thus maximizing ecological validity while avoiding retrospective recall. To address the extent to which EMA affects the behaviors and cognitions under observation, the authors examined behavioral and motivational reactivity to EMA among male and female undergraduate problem drinkers (n = 33). Participants completed a 2-week monitoring protocol using palmtop computers as well as pre- and postmonitoring measures of their drinking behavior and motivation for change. The findings suggest that the magnitude of reactivity to EMA is small. Suggestions for future research are presented.},
+author = {Hufford, Michael R. and Shields, Alan L. and Shiffman, Saul and Paty, Jean and Balabanis, Mark},
+doi = {10.1037//0893-164X.16.3.205},
+isbn = {0893-164X (Print) 0893-164X (Linking)},
+issn = {0893-164X},
+journal = {Psychology of Addictive Behaviors},
+mendeley-groups = {Methodology/Psychometrics/reactivity},
+number = {3},
+pages = {205--211},
+pmid = {12236455},
+title = {{Reactivity to ecological momentary assessment: An example using undergraduate problem drinkers.}},
+url = {http://doi.apa.org/getdoi.cfm?doi=10.1037/0893-164X.16.3.205},
+volume = {16},
+year = {2002}
+}
+
 
 @article{Desmet2016,
 abstract = {This paper introduces Pick-A-Mood, a character-based pictorial scale for reporting and expressing moods. Pick-A-Mood consists of three characters that each express eight mood states, representing four main categories: excited and cheerful (for energised-pleasant), irritated and tense (for energised-unpleasant), relaxed and calm (for calm-pleasant), and bored and sad (for calm-unpleasant). Using Pick-A-Mood requires little effort on the part of respondents, making it suitable for design research applications in which people often have little time or motivation to report their moods. Contrary to what is often assumed, mood and emotion are distinct phenomena with different measurable manifestations. These differences are discussed, and a review of existing methods is provided, indicating to what extent current methods that measure emotion are suitable for measuring mood. The development and validation of Pick-A-Mood is reported, and application examples and research opportunities are discussed. His research interests are in the fields of design methodology, persuasive technology, digital care collaboration, group awareness and social connectedness. He works in the crossover between health innovation and design, and he has a business-oriented mindset in design research. Natalia Romero Herrera works as an Assistant Professor in the Industrial Design Engineering Faculty at Delft University of Technology. She is an experienced UX/HCI Design Researcher who dedicates her research and education time to developing knowledge and teaching about living labs methodologies in the context of home and work environments. Her main research line aims to supports participants as active collaborators in the design process of innovative sustainable technologies. She investigates how to empower participants in their ability to understand, experiment with and assess the subjective and objective impact of their daily practices.},
@@ -765,6 +782,25 @@ pmid = {20636115},
 title = {{Patients can diagnose too: How continuous self-assessment aids diagnosis of, and recovery from, depression}},
 volume = {19},
 year = {2010}
+}
+
+@article{Piasecki2007,
+abstract = {Increasingly, mobile technologies are used to gather diary data in basic research and clinical studies. This article considers issues relevant to the integration of electronic diary (ED) methods in clinical assessment. EDs can be used to gather rich information regarding clients' day-to-day experiences, aiding diagnosis, treatment planning, treatment implementation, and treatment evaluation. The authors review the benefits of using diary methods in addition to retrospective assessments, and they review studies assessing whether EDs yield higher quality data than conventional, less expensive paper-pencil diaries. Practical considerations--including what platforms can be used to implement EDs, what features they should have, and considerations in designing diary protocols for sampling different types of clinical phenomena--are described. The authors briefly illustrate with examples some ways in which ED data could be summarized for clinical use. Finally, the authors consider barriers to clinical adoption of EDs. EDs are likely to become increasingly popular tools in routine clinical assessment as clinicians become more familiar with the logic of diary designs; as software packages evolve to meet the needs of clinicians; and as mobile technologies become ubiquitous, robust, and inexpensive.},
+author = {Piasecki, Thomas M. and Hufford, Michael R. and Solhan, Marika and Trull, Timothy J.},
+doi = {10.1037/1040-3590.19.1.25},
+file = {:Users/lckooistra/Library/Application Support/Mendeley Desktop/Downloaded/Piasecki et al. - 2007 - Assessing clients in their natural environments with electronic diaries Rationale, benefits, limitations, and b.pdf:pdf},
+isbn = {1040-3590 (Print)$\backslash$n1040-3590},
+issn = {1939-134X},
+journal = {Psychological Assessment},
+keywords = {Clinical assessment,Ecological momentary assessment,Electronic diary,Experience sampling,Self-report},
+month = {mar},
+number = {1},
+pages = {25--43},
+pmid = {17371121},
+title = {{Assessing clients in their natural environments with electronic diaries: Rationale, benefits, limitations, and barriers.}},
+url = {http://www.ncbi.nlm.nih.gov/pubmed/17371121 http://doi.apa.org/getdoi.cfm?doi=10.1037/1040-3590.19.1.25},
+volume = {19},
+year = {2007}
 }
 
 
