--- a/part4/mood.Rmd
+++ b/part4/mood.Rmd
@@ -2,7 +2,7 @@
 
 # Mood {#mood}
 \index{Mood}
-Mood is a common outcome in EMA research (@Myin-Germeys2016; @Desmet2016). Having respondents rate their mood during the day allows researchers to assess mood fluctuation over time or reactivity to events and daily-stressors (@Wenze2010). Often, it is studied in relation to depressive symptoms and mood disorders (@aanhetrot2012). In addition, mood can be linked to other variables, such as substance abuse behaviour (@Kirchner2013; @Serre2015), somatic health (@Engel2016; @Moore2016) or activity patterns (@Dunton2017; @Marszalek2014). 
+Mood is a common outcome in EMA research (@Myin-Germeys2016; @Desmet2016). Having respondents rate their mood during the day allows researchers to assess mood fluctuation over time or reactivity to events and daily-stressors (@Wenze2010). Often, it is studied in relation to depressive symptoms and mood disorders (@AanhetRot2012). In addition, mood can be linked to other variables, such as substance abuse behaviour (@Kirchner2013; @Serre2015), somatic health (@Engel2016; @Moore2016) or activity patterns (@Dunton2017; @Marszalek2014). 
 The definition of mood varies across studies. Usually the concept refers to a general affective state such as arousal or valance. Following this line of reasoning, a distinction can be made between mood states (e.g. irritable, cheerful, relaxed, etc.) and discrete emotions (e.g. happy, sad, anxious, etc.), where moods are thought to be less specific and more subjective, enduring and related to context (@Beedie2005; @Cranford2006; @Desmet2016). 
 Depending on the study focus and research questions, mood measurement can be operationalized in several ways. Therefore, it is vital to consider the goal of measuring mood in your own study and choose an operationalisation that matches your hypothesis and theoretical framework. In this chapter, we will discuss the most commonly used constructs, namely unidimensional mood assessment, the Circumplex model, negative and positive affect, and finally the 'bag of items' approach. 
 
