reference corrections (remove duplicates / add missing information).

--- a/book.bib
+++ b/book.bib
@@ -35,9 +35,12 @@
 
 
 @book{Bennik2015,
-  title={Every Dark Cloud Has a Colored Lining: The Relation Between Positive and Negative Affect and Reactivity to Positive and Negative Events},
-  author={Bennik, Elise Charlotte},
-  year={2015}
+  title= {Every Dark Cloud Has a Colored Lining: The Relation Between Positive and Negative Affect and Reactivity to Positive and Negative Events},
+  author = {Bennik, Elise Charlotte},
+  year = {2015},
+  isbn = {978-90-367-8158-9},
+  publisher = {University of Groningen},
+  address = {Groningen}
 }
 
 
@@ -53,10 +56,13 @@
 }
 
 
-@article{Booij2015,
-  title = {Dynamics of the human stress system in depression},
+@book{Booij2015,
+  title = {Dynamics of the human stress system in depression: A combined population- and person-based approach to assess long-term changes and daily life fluctuations},
   year = {2015},
-  author = {Booij, Sanne}
+  author = {Booij, Sanne},
+  address = {Groningen},
+  isbn = "978-94-6259-832-4",
+  publisher = {University of Groningen}
 }
 
 
@@ -148,28 +154,18 @@ mendeley-groups = {Methodology/Psychometrics},
 
 
 @article{Desmet2016,
-  author = {Desmet, P M A and Vastenburg and Romero, N},
+  author = {Desmet, Pieter M A and Vastenburg, Martijn H and Romero, Natalia},
   doi = {10.13140/RG.2.1.3894.9365},
   journal = {Journal of Design Research},
   number = {3},
   pages = {241--279},
-  title = {{Pick-A-Mood Manual Pictorial self-report scale for measuring and expressing mood states Pick-A-Mood}},
+  title = {{Mood measurement with Pick-A-Mood: review of current methods and design of a pictorial self-report scale}},
   url = {http://studiolab.ide.tudelft.nl/diopd/library/tools/pick-a-mood/},
   volume = {14},
   year = {2016}
 }
 
 
-@article{Desmet2016,
-  author = {Desmet, Pieter M A and Vastenburg, Martijn H and Romero, Natalia},
-  journal = {J. Design Research},
-  keywords = {design for mood,measurement method review,mood measurement,pictorial affect scale},
-number = {3},
-  pages = {241--279},
-  title = {{Mood measurement with Pick-A-Mood: review of current methods and design of a pictorial self-report scale}},
-  volume = {14},
-  year = {2016}
-}
 
 @article{Dunton2017,
   author = {Dunton, Genevieve Fridlund},
@@ -240,22 +236,6 @@ number = {3},
 }
 
 
-@misc{Engel2016,
-  archivePrefix = {arXiv},
-  arxivId = {NIHMS150003},
-  author = {Engel, Scott G. and Crosby, Ross D. and Thomas, Graham and Bond, Dale and Lavender, Jason M. and Mason, Tyler and Steffen, Kristine J. and Green, Dan D. and Wonderlich, Stephen A.},
-booktitle = {Current Psychiatry Reports},
-  doi = {10.1007/s11920-016-0672-7},
-  keywords = {Bariatric surgery,Disordered eating,Eating disorders,Ecological momentary assessment,Gastric bypass surgery,Momentary assessment,Naturalistic assessment,Obesity},
-  number = {4},
-  pages = {1--9},
-  pmid = {26893235},
-  title = {{Ecological Momentary Assessment in Eating Disorder and Obesity Research: a Review of the Recent Literature}},
-  volume = {18},
-  year = {2016}
-}
-
-
 @article{EllisDavies2012,
   author = {Ellis-Davies, Kate and Sakkalou, Elena and Fowler, Nia C. and Hilbrink, Elma E. and Gattis, Merideth},
   doi = {10.3758/s13428-012-0205-1},
@@ -310,23 +290,6 @@ booktitle = {Current Psychiatry Reports},
 
 
 
-@article{Groot2010,
-  author = {Groot, Peter C.},
-  doi = {10.3109/09638237.2010.494188},
-  isbn = {1360-0567},
-  issn = {09638237},
-  journal = {Journal of Mental Health},
-  keywords = {Depression,diagnosis,self-help devices,self-help groups},
-mendeley-groups = {Instruments/psymate,Groups/Groups-NL/Maastricht},
-  number = {4},
-  pages = {352--362},
-  pmid = {20636115},
-  title = {{Patients can diagnose too: How continuous self-assessment aids diagnosis of, and recovery from, depression}},
-  volume = {19},
-  year = {2010}
-}
-
-
 @article{HaedtMatt2011,
   archivePrefix = {arXiv},
   arxivId = {NIHMS150003},
@@ -365,8 +328,9 @@ mendeley-groups = {Instruments/psymate,Groups/Groups-NL/Maastricht},
   doi = {10.1002/9781118384404.ch20},
   isbn = {9781119978268},
   issn = {1548-5943},
-  keywords = {EMA sampling design,EMA-based treatment,Ecological Momentary Assessment (EMA),Ecological   momentary intervention (EMI),Substance abuse research},
+  keywords = {EMA sampling design,EMA-based treatment,Ecological Momentary Assessment (EMA),Ecological momentary intervention (EMI),Substance abuse research},
   pages = {541--565},
+  publisher = {Wiley-Blackwell},
   pmid = {18509902},
   title = {{Ecological Momentary Assessment}},
   year = {2013}
@@ -408,15 +372,14 @@ mendeley-groups = {Instruments/psymate,Groups/Groups-NL/Maastricht},
 @article{Marszalek2014,
   author = {Marszalek, Jolanta and Morgulec-Adamowicz, Natalia and Rutkowska, Izabela and Kosmol, Andrzej and Marszalek, Jolanta and Morgulec-Adamowicz, Natalia and Rutkowska, Izabela and Kosmol, Andrzej},
   title = {{Using Ecological Momentary Assessment to Evaluate Current Physical Activity, Using Ecological Momentary Assessment to Evaluate Current Physical Activity}},
-  journal = {BioMed Research International, BioMed Research International},
+  journal = {BioMed Research International},
   year = {2014},
   volume = {2014,},
   pages = {e915172},
   issn = {2314-6133, 2314-6133},
-  doi = {10.1155/2014/915172, 10.1155/2014/915172},
-  mendeley-groups = {Reviews},
-  url = {http://www.hindawi.com/journals/bmri/2014/915172/abs/, http://www.hindawi.com/journals/bmri/2014/915172/abs/{\%}5Cnhttp://downloads.hindawi.com/journals/bmri/2014/915172.pdf{\%}5Cnhttp://www.hindawi.com/journals/bmri/2014/915172/{\%}5Cnhttp://www.ncbi.nlm.nih.gov/},
+  doi = {10.1155/2014/915172}
 }
+
 
 
 @book{Mehl2012,
@@ -446,23 +409,6 @@ mendeley-groups = {Instruments/psymate,Groups/Groups-NL/Maastricht},
   volume = {75},
   year = {2016}
 }
-
-
-
-@article{Marszalek2014,
-  author = {Marszalek, Jolanta and Morgulec-Adamowicz, Natalia and Rutkowska, Izabela and Kosmol, Andrzej},
-  doi = {10.1155/2014/915172},
-  issn = {2314-6141},
-  journal = {BioMed research international},
-  mendeley-groups = {Reviews},
-  pages = {915172},
-  pmid = {25126580},
-  title = {{Using ecological momentary assessment to evaluate current physical activity.}},
-  url = {http://www.hindawi.com/journals/bmri/2014/915172/abs/, http://www.hindawi.com/journals/bmri/2014/915172/abs/{\%}5Cnhttp://downloads.hindawi.com/journals/bmri/2014/915172.pdf{\%}5Cnhttp://www.hindawi.com/journals/bmri/2014/915172/{\%}5Cnhttp://www.ncbi.nlm.nih.gov/ http://www.ncbi.nlm.nih.gov/pubmed/25126580 http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=PMC4122013},
-  volume = {2014},
-  year = {2014}
-}
-
 
 
 @article{Moskowitz2006,
@@ -775,28 +721,10 @@ number = {1-2},
   pages = {794--804},
   pmid = {20619520},
   title = {{Use of ecological momentary assessment in mood disorders research.}},
-  url = {http://linkinghub.elsevier.com/retrieve/pii/S0272735810001017 http://www.ncbi.nlm.nih.gov/pubmed/20619520},
   volume = {30},
   year = {2010}
 }
 
-
-@article{Wenze2010,
-  author = {Wenze, Susan J. and Miller, Ivan W.},
-  doi = {10.1016/j.cpr.2010.06.007},
-  isbn = {0272-7358},
-  issn = {1873-7811},
-  journal = {Clinical psychology review},
-  keywords = {Bipolar disorder,Depression,Ecological momentary assessment,Experience sampling,Mood disorder},
-  month = {aug},
-  number = {6},
-  pages = {794--804},
-  pmid = {20619520},
-  title = {{Use of ecological momentary assessment in mood disorders research.}},
-  url = {http://linkinghub.elsevier.com/retrieve/pii/S0272735810001017 http://www.ncbi.nlm.nih.gov/pubmed/20619520},
-  volume = {30},
-  year = {2010}
-}
  
 
 @article{Wichers2011,
