--- a/part1/R.Rmd
+++ b/part1/R.Rmd
@@ -7,19 +7,14 @@ indispensable for the management and analysis of EMA data: R and RStudio.
 ## What are R and RStudio?
 
 R is a programming language and software environment for statistical computing
-and data visualisation. 
-
-RStudio is a powerful user interface to R. It has many useful features
-that greatly simplify R-work. We strongly advise you to adopt the R/RStudio-
-combo.
+and data visualisation. RStudio is a powerful user interface to R. It has many useful features that greatly simplify R-work. We strongly advise you to adopt the R/RStudio-combo.
 
 
 ## Why R?
 
 R, some may have told you, is for data scientists, methodologists, and
 scientific programmers only. It has a steep learning curve. If you are trained
-in SPSS, it will take a lot of time to become as productive in R as in SPSS. Why
-invest in R?
+in SPSS, it will take time to become as productive in R as in SPSS. Why then, should you invest in R?
 
 - Unlike SPSS, R is free. It does not eat up your budget. Why pay for something
 that you can get for free?
@@ -42,12 +37,11 @@ However, if you want to dive deeper, you will find that you can easily do so.
 You can study source code to understand a particular technique better. You can
 code new functions. R allows you to grow. 
 
-- R's use base is expanding every year. Chances are high that R is the standard
+- R's user base is expanding every year. Chances are high that R will be the standard
 in your next workplace. R will look great on your CV.
 
 You don't have to be a programmer or methodologist to use R. Yes, it takes time
-to master its full potential, but you should be able to run basic
-analyses in it within a week. This chapter will get you started.
+to master its full potential, but you should be able to run basic analyses in it within a week. This chapter will get you started.
 
 ## Installing R & RStudio
 
@@ -117,7 +111,7 @@ what if you want to save a particularly useful chain of statements? For this,
 you can use a script file.
 
 To create a script file, use the RStudio menu: `File > New File > R Script`.
-This will open a new tab in the top-right pane of RStudio, where you can edit
+This will open a new tab in the top-left pane of RStudio, where you can edit
 the script.
 
 - In the script window, type all statements that you have been entering in the
@@ -129,9 +123,9 @@ console in the previous section.
 
 All commands in the script are executed. The commands are echoed in the console
 pane, and results are shown immediately, as was the case before, when you typed
-the commands in the Console yourself.
+the commands in the console yourself.
 
-Scripts can also be run line by line. Set your cursor in the line you want to
+Scripts can also be run line by line. Move the cursor to the line you want to
 run, and press "Ctrl+Enter". The line is copied to the console and executed,
 and the cursor in the script will move to the next line, allowing you to walk
 through the script, step by step.
@@ -142,8 +136,7 @@ through the script, step by step.
 
 Something that confuses new Rstudio users, who are more familiar with SPSS, is
 that it is not obvious how to import data into RStudio. In SPSS, the data
-are in plain sight. In R, you first have to import the data. There are several
-ways to do so.
+are in plain sight. In R, you first have to import the data.
 
 ### Using RStudio menu's to import data 
 
@@ -162,11 +155,9 @@ file on your computer, and click `Import` in the next window (see Figure
 \@ref(fig:rstudiocsvimport)).
 
 RStudio shows the data, in tabular view, in the top-left window, ready for
-further analysis. You will also find a new entry in the `Environment`-tab in
+analysis. You will also find a new entry in the `Environment`-tab in
 the top-right pane. When you click the small arrow, at the left of the name, you
 will see a brief summary of the contents of the data.
-
-
 
 ```{r rstudiocsvimport, fig.cap="RStudio's CSV import wizard.", out.width="98%", echo=FALSE}
 knitr::include_graphics("images/R/csv_import.png")
@@ -174,10 +165,7 @@ knitr::include_graphics("images/R/csv_import.png")
 
 ### Using functions to import data
 
-While RStudio's Data import wizard is useful, you will probably use it less if
-you get more experienced in R. Most likely, you will convert to using the more
-efficient R commands to import data. For example, it takes only a single line to
-download and import the example data.
+While RStudio's Data import wizard is useful, you will probably use it less over time. Most likely, you will convert to using the more efficient R commands to import data. For example, it takes only a single line to download and import the example data.
 
 ```{r cs24}
 # Code snippet 2.4: importing csv-data from the internet.
@@ -228,8 +216,7 @@ mean(ESMdata$mood_relaxed)
 ```
 
 There are, of course, many ways in which you can summarise and manipulate your
-data. At this point, the important milestone is that you imported
-and accessed your data in R.
+data. At this point, the important milestone is that you imported and accessed data in R. 
 
 
 ## Extending R with Packages
@@ -286,7 +273,7 @@ devtools::install_github("jruwaard/emaph")
 ### Using packages
 
 To use packages, you have to tell R to load them. You do this with the `library`
-function. For example, to use package 'tideverse' and 'emaph', type:
+function. For example, to use package 'tidyverse' and 'emaph', type:
 
 ```{r cs212, eval = TRUE}
 # Code snippet 2.12: Loading packages.
@@ -298,7 +285,7 @@ Once loaded, you can use the functions in the packages. From the documentation
 of emaph (type: `?emaph`), you learn that this package contains several example
 EMA datasets. Dataset 'csd' (see `?csd`) contains the data from the 'critical
 slowing down'-study [@Kossakowski2017; @Wichers2016], in which a patient
-recorded his mood for 239 days (see also Chapter 13).
+recorded his mood, for 239 days (see also Chapter 13).
 
 To plot the irritation levels of this patient in the first six days, using the
 `ggplot` function from package 'ggplot2' (which is in 'tidyverse'), type:
@@ -324,7 +311,7 @@ mean of 2 and standard deviation of 4? How to tell this to R?
 ### Using '?' to consult the documentation
 
 The good thing is that you already known the name of the function to use, since
-we used it in the previous section: it is `rnorm`. To check the documentation of
+we used it in the previous section: it is 'rnorm'. To check the documentation of
 this function, type `?rnorm` in the console.
 
 ```{r cs214, eval = FALSE}
@@ -373,9 +360,8 @@ t.test(A, B)
 
 ### Google 
 
-With Google, you will find most answers to your R questions online. Googling
-for "t test R", for example, results in a very rich set of online resources. You
-will find that some resources provide you with more and better quality answers.
+With Google, you will find many answers to your R questions. Googling
+for "t-test R", for example, results in a rich set of online resources. 
 Good resources are:
 
 - RSeek (see http://rseek.org/)
@@ -387,30 +373,27 @@ Good resources are:
 
 ## Next steps
 
-Not all functions carry clear-cut names. Many are not easily located via a
+Not all functions have clear-cut names. Some are not easily located via a
 simple search. One reason why R is said to have a steep learning curve is that
 it requires you to develop a vocabulary of statements that are acceptable to R.
 You have to learn how to speak the language. This takes time.
 
 Build your vocabulary by reading books (see the end of this chapter), using
 Cheatsheets (lists of useful commands; see, for example 
-https://www.rstudio.com/resources/cheatsheets/), or by browsing the extensive documentation built into R (type: `help.start()` in the console) and Rstudio 
+https://www.rstudio.com/resources/cheatsheets/), or by browsing the extensive documentation built into R (type: `help.start()` in the console), and Rstudio 
 (see the 'Help' menu option).
 
 
 ### Learning from examples
 
-This manual contains many R code snippets. You now know how to run these in
-RStudio. By studying these examples (or other code examples you find on the
-internet), you will become more familar with R.
+This book contains many R code snippets. By studying these examples, you will become more familar with R.
 
-Many examples will introduce R language constructs and functions that are unknown
+Some examples will introduce R language constructs and functions that are unknown
 to you. Learn from from these examples, by using `?` on each element that you do
 not understand.
 
 For example, consider the example below, which shows R code to reveal how hungry
-the patient in the 'csd' study was over the course of the day. It contains a lot
-of statements that weren't discussed yet. Table \ref{tab:usingrhelp} shows how
+the patient in the 'csd' study was over the course of the day. It contains several statements that weren't discussed yet. Table \@ref(tab:usingrhelp) shows how
 `?` can help to understand the code and its output.
 
 ```{r cs217, warning = FALSE, fig.cap = "Reported hunger levels, over the course of the day, of a single respondent.", fig.asp = 0.3}
@@ -424,7 +407,7 @@ ggplot(data = csd, mapping = aes(x = resptime_s, y = phy_hungry)) +
 Table: (\#tab:usingrhelp) Using R Help to understand code snippets.
 
 +-------------------+----------------------------------------------------------+
-| Help              | What you can learn from the documentation                |
+| Help              | What you learn from the documentation                    |
 +:==================+:=========================================================+
 | ?ggplot           | `ggplot` creates a new plot from data in 'csd'.          |
 |                   | The variable `hour` from 'csd' is used as x.             |
@@ -452,9 +435,7 @@ Table: (\#tab:usingrhelp) Using R Help to understand code snippets.
 
 ### Read books
 
-This manual does not provide a comprehensive training in R and RStudio. There is
-no need for that, since excellent resources are readily available. A selection
-is presented below.
+This book does not provide a comprehensive tutorial. There is no need for that, since excellent resources are readily available. A selection is presented below.
 
 - Many mental health researchers own a copy of Andy Field's popular book
 "Discovering Statistics Using IBM SPSS Statistics" [@FieldSPSS]. For those,
@@ -462,30 +443,24 @@ Field's R-version of this book, "Discovering Statistics Using R" [@FieldR]
 provides a familiar companion in making the transition to R. See 
 https://www.discoveringstatistics.com/
 
-- Free manuals can be found at the offical CRAN site. The manuals are dry, and
-not for the faint of heart, but complete and authorative, since the authors
-are members of the R core development team. See https://cran.r-project.org/
-manuals.html (or type `help.start()` in the console - the manuals are already on
-your computer).
+- Free manuals can be found at the offical CRAN site. The manuals are dry, but complete and authorative, since the authors are members of the R core development team. See https://cran.r-project.org/manuals.html (or type `help.start()` in the console).
 
-- While at CRAN, be sure to browse the 'contributed documentation'-section as
-well. On this page, you will find many freely available manuals contributed by
+- While at CRAN, be sure to browse the 'contributed documentation'-section. On this page, you will find many freely available manuals contributed by
 the R community. See https://cran.r-project.org/other-docs.html
 
 
 ### Online Courses
 
 - DataCamp, an online data science education platform, offers several high-
-quality courses in R. See http://www.datacamp.com
+quality interactive courses in R. See http://www.datacamp.com
 
-- The Try-R course at the CodeSchool website provides an alternative to the
-interactive courses of DataCamp. See: http://tryr.codeschool.com/
+- The Try-R course at the CodeSchool website provides an alternative to DataCamp. See: http://tryr.codeschool.com/
 
 - The Quick-R website provides a solid, concise, and rich
 introduction to R. See https://www.statmethods.net/
 
 
-### Learn R in R
+### Learn R, in R
 
 Package 'swirl' comprises a set of interactive courses that teach many aspects
 of the R language. See http://swirlstats.com
